fix overflow bug

--- a/css/header.css
+++ b/css/header.css
@@ -61,12 +61,12 @@
 }
 
 .bg-dark {
-  position: absolute;
+  position: fixed;
   z-index: 10;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
   display: none;
 }
@@ -78,12 +78,12 @@
 .nav-mobile {
   display: none;
   transition: 0.5s ease;
-  position: absolute;
+  position: fixed;
   z-index: 11;
   top: 0;
   right: -300px;
   width: 240px;
-  height: 100dvh;
+  height: 100%;
   background-color: #fff;
   padding: 10px 10px 10px 20px;
 }
