--- a/style.css
+++ b/style.css
@@ -8,9 +8,14 @@ html {
   scroll-behavior: smooth;
 }
 
+.no-scroll {
+  overflow: hidden;
+}
+
 body {
   background-color: #f4f4f6;
   font-family: "Inter", sans-serif;
+  overflow-x: hidden;
 }
 
 .container {
